<?xml version="1.0" encoding="utf-8"?>
<!--    /*
    Matthew Lorenc - Z1904531
    CSCI 322
    Portfolio 4-1
    Due: 02/18/22
 */-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:background="@color/lightGray"
        android:padding="10dp"
        android:text="@string/label_bill"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/billEditText"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/billEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_bill_amount"
        android:imeOptions="flagNoFullscreen"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/lightGray"
        android:padding="10dp"
        android:text="@string/label_tip_percent"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/tipPercentEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/hint_tip_percent"
        android:imeOptions="flagNoFullscreen"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/billEditText"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#FFFF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"></View>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/lightGray"
        android:padding="10dp"
        android:text="@string/label_tip"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/lightGreen"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/lightGray"
        android:padding="10dp"
        android:text="@string/label_total"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/totalTextView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/lightGreen"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/tipTextView" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:onClick="getHelp"
        android:text="Get Help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalTextView4" />

</androidx.constraintlayout.widget.ConstraintLayout>